feat: app-modernization-power - hooks, steering, skills, MCP config